# 100percentcamera

./: pyproject.toml
src/: chip_approach.py  dlib_example.py  landmark finder.py  main.py
