[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Randy Butts", email = "randybuttsii@gmail.com"},
]
dependencies = [
    "numpy>=1.25.2",
    "opencv-python>=4.8.0.76",
    "dlib>=19.24.2",
    "imutils>=0.5.4",
    "deepface>=0.0.79",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

